[package]
name = "dante-cli"
version = "0.1.0"
edition = "2021"
authors = ["Cameron VanderTuig"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
dante-control-rs = { path = "../dante-control-rs" }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
stderrlog = "0.5.4"
log = "0.4.20"