[package]
name = "dante-cli"
version = "0.4.0"
edition = "2021"
authors = ["Cameron VanderTuig"]
description = "A Dante discovery and control command line tool utilizing dante-control-rs"
repository = "https://github.com/IRSMsoso/dante-cli"
homepage = "https://github.com/IRSMsoso/dante-cli"
license = "Apache-2.0"
readme = "README.md"
keywords = ["dante", "audio"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
dante-control-rs = {  path = "../dante-control-rs", version = "0.4.0"}
stderrlog = "0.5.4"
ascii = "1.1.0"

# a little tool that will help us later.
shellwords = "1.1.0"
thiserror = "1.0.56"